# ollama-code-assistant

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
oca/: __init__.py  cli.py
oca/core/: __init__.py  ollama.py  session.py
oca/utils/: __init__.py  files.py  git.py
tests/: __init__.py
tests/unit/: __init__.py  test_cli.py  test_git.py  test_new_commands.py  test_ollama.py  test_session.py
